# uas

./: .replit  model.pkl  pyproject.toml  reset_db.py  scaler.pkl  signlearn.db  start.sh  test_api.py
signlearn-ai/ai-service/: app.py  model.pkl  model.py  requirements.txt  scaler.pkl  train.py
signlearn-ai/backend/: app.py  config.py  requirements.txt
signlearn-ai/backend/database/: models.py
signlearn-ai/backend/routes/: gestures.py  practice.py
signlearn-ai/docs/: DATABASE.md  QUICKSTART.md  README.md  REAL_DATASET_SETUP.md  SAMPLE_DATA.md
signlearn-ai/frontend/: index.html  learn.html  practice.html  quiz.html
signlearn-ai/frontend/css/: style.css
signlearn-ai/frontend/js/: config.js  dashboard.js  learn.js  practice.js  quiz.js
