[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.0",
    "flask-cors==4.0.0",
    "flask-sqlalchemy==3.0.5",
    "gunicorn>=26.0.0",
    "joblib==1.2.0",
    "mediapipe>=0.10.35",
    "numpy==1.24.0",
    "opencv-python-headless>=4.8.1.78",
    "pillow==9.5.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn==1.2.0",
]
